Closed Bug 1887716 Opened 2 years ago Closed 2 years ago

Inconsistent handling of the `MOZ_FORCE_DISABLE_E10S` pref

Categories

(Core :: DOM: Content Processes, defect)

defect

Tracking

()

RESOLVED FIXED
126 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox124 --- wontfix
firefox125 --- wontfix
firefox126 --- fixed

People

(Reporter: nika, Assigned: gregp)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Before bug 1724089, in order to disable e10s with the MOZ_FORCE_DISABLE_E10S environment variable, we had to set it to the current browser's version number, however that patch changed behaviour such that it only needed to be set to the string "1", and added an additional restriction that E10S could only be disabled when nonlocal connections are disabled.

However, this check was actually implemented such that it only checked that the first character of the MOZ_FORCE_DISABLE_E10S environment variable. This appears to have led to some callsites which were previously setting the environment variable to the full version number being missed (https://searchfox.org/mozilla-central/rev/0e9ea50a999420d93df0e4e27094952af48dd3b8/toolkit/xre/test/marionette/test_fission_autostart.py#242, https://searchfox.org/mozilla-central/source/toolkit/xre/test/marionette/test_win32k_enrollment.py#393,627,873,1141,1370,1607,1857,2107).

These callsites work for now, due to the first digit in Firefox's version number being a "1" (e.g. "126.0a1"), however will stop working once we reach version 200, as the first digit will no longer match.

We should probably check that the environment variable has the expected length as well, and update these tests to write the string "1" into the pref instead of the current version number.

Set release status flags based on info from the regressing bug 1724089

:gregp, since you are the author of the regressor, bug 1724089, could you take a look?

For more information, please visit BugBot documentation.

Assignee: nobody → gregp
Status: NEW → ASSIGNED
Flags: needinfo?(gregp)
Pushed by gp3033@protonmail.com: https://hg.mozilla.org/integration/autoland/rev/8539b8958904 Improve MOZ_FORCE_DISABLE_E10S check r=nika
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 126 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: