Bug 1887716 - Improve MOZ_FORCE_DISABLE_E10S check r=nika

Differential Revision: https://phabricator.services.mozilla.com/D206289