toolkit/xre/test/marionette/test_fission_autostart.py
@@ -238,8 +238,7 @@ class TestFissionAutostart(MarionetteTestCase):
             decision="enabledByDefault",
         )
 
-        app_version = self.execute_script("return Services.appinfo.version")
-        self.restart(env={ENV_DISABLE_E10S: app_version})
+        self.restart(env={ENV_DISABLE_E10S: "1"})
         self.check_fission_status(
             enabled=False,
             decision="disabledByE10sEnv",
